# geminibot

./: .env.example  .gitignore  README.md  pyproject.toml  run_tool_bridge_acceptance.py
app/: __init__.py  cli.py  config.py  dispatcher.py  main.py
app/agent/: __init__.py  engine.py  session_store.py  workspace.py
app/gateway/: __init__.py  feishu.py
app/memory/: consolidate.py  store.py  tools.py  worker.py
app/memory/test/: test_memory_regressions.py  test_memory_semantics.py
app/rendering/: __init__.py  cards.py
app/scheduler/: __init__.py  loop.py  store.py  tools.py
app/test/: README.md  test_dispatcher_wiring.py
app/test/e2e/: README.md  __init__.py  test_manual_message_e2e.py  test_memory_flow_e2e.py  test_scheduler_flow_e2e.py
app/test/unit/: __init__.py  test_agent_engine_prompt.py  test_dispatcher_wiring.py  test_main_lifecycle.py
app/utils/: state.py
notes/: feishu-validation.md  gemini-cli-validation.md  tool-bridge-acceptance.md
specs/: implementation-plan.md  spec.md  task_list.md
templates/: AGENT.md  IDENTITY.md  MEMORY.md  SOUL.md  USER.md
