[project]
name = "geminibot"
version = "0.1.0"
description = "Local-first Feishu AI assistant powered by Gemini CLI Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "croniter>=3.0.3",
  "pydantic>=2.8.2",
  "lark-oapi>=1.5.3"
]

[project.scripts]
geminibot-tool-bridge-acceptance = "run_tool_bridge_acceptance:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
py-modules = ["run_tool_bridge_acceptance"]
